SS-4018 fix chart tooltip overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1832,7 +1832,7 @@ td.b-main-table__status-col {
     border-radius: 5px 5px 0 0;
     margin: 0 15px 30px;
 	/*height: 100px;*/
-	overflow: hidden;
+	/*overflow: hidden;*/
 }
 
 .b-chart-block__title {
